INCLUDES = \
        -I$(top_builddir)/include       \
        -I$(top_srcdir)/include         

bin_PROGRAMS=Front

Front_SOURCES = \
	ecif_body2D.cpp \
	ecif_body3D.cpp \
	ecif_body.cpp \
	ecif_bodyElement1D.cpp \
	ecif_bodyElement2D.cpp \
	ecif_bodyElement3D.cpp \
	ecif_bodyElement.cpp \
	ecif_bodyElementGroup.cpp \
	ecif_bodyElementLoop.cpp \
	ecif_bodyForce.cpp \
	ecif_bodyLayer.cpp \
	ecif_bodyParameter.cpp \
	ecif_boundaryCondition.cpp \
	ecif_boundaryParameter.cpp \
	ecif_boundbox.cpp \
	ecif_calculator.cpp \
	ecif_constant.cpp \
	ecif_const.cpp \
	ecif_control.cpp \
	ecif_coordinate.cpp \
	ecif_datafile.cpp \
	ecif_def_trx.cpp \
	ecif_equation.cpp \
	ecif_equationVariables.cpp \
	ecif_func.cpp \
	ecif_geometry.cpp \
	ecif_gridH.cpp \
	ecif_gridParameter.cpp \
	ecif_initialCondition.cpp \
	ecif_inputAbaqus.cpp \
	ecif_input.cpp \
	ecif_inputEgf.cpp \
	ecif_inputElmer.cpp \
	ecif_inputEmf.cpp \
	ecif_inputFidap.cpp \
	ecif_inputFront.cpp \
	ecif_inputIdeas.cpp \
	ecif_inputIdeasWF.cpp \
	ecif_inputIges.cpp \
	ecif_inputThetis.cpp \
	ecif_main.cpp \
	ecif_material.cpp \
	ecif_mesh.cpp \
	ecif_model_aux.cpp \
	ecif_model.cpp \
	ecif_modelMeshManager.cpp \
	ecif_modelObject.cpp \
	ecif_modelOutputManager.cpp \
	ecif_modelParameter.cpp \
	ecif_nurbs.cpp \
	ecif_parameter.cpp \
	ecif_parameterField.cpp \
	ecif_process.cpp \
	ecif_renderer.cpp \
	ecif_renderer_OGL.cpp \
	ecif_simulationParameter.cpp \
	ecif_solverControl.cpp \
	ecif_solver.cpp \
	ecif_timer.cpp \
	ecif_timestep.cpp \
	ecif_userinterface_TCL.cpp \
	ecif_userSettings.cpp 

